--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</nav>
 		</header>
 		<div class="contenedor">
-			<h1 class="titulo">Guitarras <span>invie22</span>sibles</h1><!-- titulo -->
+			<h1 class="titulo">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
 			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 			<a class="button" href="#guitarras">Conoce más</a><!-- botón -->			
 		</div>
